# catalight

./: .gitignore  .readthedocs.yaml  GC_Analysis_v0_1.py  LICENSE  LedIndicatorWidget.py  experiment_control.py  main_ctrl_file.py  main_ctrl_file_AXD.py  main_ctrl_file_CO2.py  photoreactor.yml  photoreactor_GUI.py  pyproject.toml  reactorUI.ui  readme.md  readme.rst  requirements.txt  restructure_raw_files.py  setup.cfg  setup.py
Equipment/: BruceJr_v1.py
Equipment/Harrick_Watlow_TempCtrl/: ReadMe.txt
Equipment/NKT_Laser/: ReadMe.txt
SRI_GC/: experiment_control.py  restructure_raw_files.py
archive/: environment.yml  run_gc_analysis.py
catalight/: LASTFILE.SRI  __init__.py  catalight_GUI.py  catalight_GUI_v2.py  cl_tools.py  config.py
catalight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_analysis/: change_xdata.py  chromatogram_plotter.ui  edit_pickled_fig.py  gc_analysis.py  gcdata.py  make_calibration_files.py  multiplot_results.py  plot_pro_v1.py  plot_series.py  run_calibration.py  run_gc_analysis.py
docs/: CNAME
equipment/: run_diode_calibration.py
example_data/: demo_calibration.csv
photoreactor/: __init__.py  experiment_control.py  main_ctrl_file.py  main_ctrl_file_CO2.py  photoreactor_GUI.py  restructure_raw_files.py
photoreactor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
photoreactor_code/: LASTFILE.SRI  experiment_control.py  main_ctrl_file.py  main_ctrl_file_CO2.py  mplwidget.py  photoreactor_GUI.py  reactorUI.ui  reactorUI_mainwindow.ui  reactorUI_testing.ui  restructure_raw_files.py
(+1854 files in other folders)
