[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photoreactor"
version = "0.0.1"
authors = [
  { name="Briley Bourgeois", email="bbourge6@stanford.edu" },
  { name="Claire Carlin", email="cccarlin@stanford.edu" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dionne-Lab/photoreactor"
"Bug Tracker" = "https://github.com/Dionne-Lab/photoreactor/issues"
