[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catalight"
version = "0.1.5"
authors = [
  { name="Briley Bourgeois", email="bbourge6@stanford.edu" },
  { name="Claire Carlin", email="cccarlin@stanford.edu" }
]
description = "Photoreactor system automation, data handling, and analysis."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Dionne-Lab/catalight"
"Bug Tracker" = "https://github.com/Dionne-Lab/catalight/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
